--- a/css/_4-layouts/page.scss
+++ b/css/_4-layouts/page.scss
@@ -29,6 +29,10 @@
 
   > .col-8 {
     flex: 0 0 calc(8 / 12 * 100%);
+
+    @media (max-width: $desktop) {
+      flex: 0 0 100%;
+    }
   }
 }
 
